Change some phrases on front page to german and add more latex files to gitignore

--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -31,10 +31,10 @@
 \title{Prozedurale Generierung von Wirbeltierskeletten}
 
 %% Type of the thesis 
-\thesistype{Master's Thesis}
+\thesistype{Masterarbeit}
 
 %% Change the institute here, ``IPD'' is default
- \myinstitute{Institute for Computer Graphics}
+ \myinstitute{Lehrstuhl für Computergrafik}
 
 %% You can put a logo in the ``logos'' directory and include it here
 %% instead of the SDQ logo
