Add link to autodesk fbx sdk documentation

--- a/latex/sections/content.tex
+++ b/latex/sections/content.tex
@@ -95,7 +95,7 @@
 
 \begin{itemize}
  \item Verwendung am besten über Autodesk FBX SDK für C++. 
- \item Dokumentation: \url{http://help.autodesk.com/view/FBX/2019/ENU/}
+ \item Dokumentation: \url{http://help.autodesk.com/view/FBX/2019/ENU/} und \url{http://docs.autodesk.com/FBX/2014/ENU/FBX-SDK-Documentation/index.html}
  \item Es gibt auch fbxcel, eine FBX library für Rust. Ist aber relativ low level und nicht ganz offensichtlich wie zu verwenden.
 \end{itemize}
 
