--- a/latex/sections/content.tex
+++ b/latex/sections/content.tex
@@ -2,16 +2,24 @@
 \chapter{Bisherige Arbeiten}
 
 \begin{itemize}
- \item zbrush zfpheref (?): "`Skelett"' mit Kugeln %TODO
+ \item zbrush zspheres: "`Skelett"' mit Kugeln %TODO
  \item 3D Studio Max bipad: Parameter wie Anzahl Beine, Haltung,\dots einstellbar, generiert dann Skelett (ist aber "`nicht so toll"') %TODO
 \end{itemize}
 
-
+%--------------------------------
 \section{Skelett der Wirbeltiere}
 
 \begin{itemize}
  \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) $\rightarrow$ über vergleichende Anatomie informieren
  \item "`Von vielen Zoologen wird heute der Begriff Schädeltiere (Craniota) für dieses Taxon bevorzugt. Diese Auffassung berücksichtigt, dass die Rundmäuler, wie auch einige andere Wirbeltiere, als Achsenskelett keine Wirbelsäule, sondern eine Chorda dorsalis haben. Doch allen Wirbeltieren gemein ist ein verknöcherter oder knorpeliger Schädel; sein Vorhandensein gehört somit zu den gemeinsam abgeleiteten Merkmalen (Synapomorphien) dieser Chordaten-Gruppe."' (\url{https://de.wikipedia.org/wiki/Wirbeltiere}) $\rightarrow$ Beschränkung auf Schädeltiere mit Wirbelsäule
+\end{itemize}
+
+%-------------
+\section{Ziva}
+
+\begin{itemize}
+ \item Ziva VFX Maya Plugin zur Erstellung von Charakteren und Simulation von biomechanischen Bewegungen \url{https://zivadynamics.com/}
+ \item Charaktererstellung in Ziva beginnt mit der Modellierung des Skeletts. Knochen mit Animationen werden als Alembic-Datei gespeichert und dann in "`Ziva-Knochen"' konvertiert. \url{https://discover.therookies.co/2019/06/01/vfx-in-9-steps/}
 \end{itemize}
 
 
@@ -58,7 +66,6 @@
  \item Knochen/Gelenke bekommen Zusatzattribute für Start- und Zielpunkte der Muskeln.
  \item Muskeln haben eine "`Dicke"' und aus Start- und Zielpunkt muss Kurve des Muskels generiert werden.
  \item Wie wird die genaue Form festgelegt? Muskeln irgendwie auf ihre "`Dicke"' aufblähen + Interaktion mit vorhandenen Elementen (andere Muskeln und Knochen) $\rightarrow$ eigenes Thema?
- \item ziva %TODO
 \end{itemize}
 
 %-------------
@@ -101,13 +108,25 @@
 \section{Dateiformate}
 
 \begin{itemize}
- \item Welches Format wird am meisten Verwendet? $\rightarrow$ jeder Editor geht mit Muskeln und Gelenken anders um, verschiedene Dateiformate
- \item Einfachstes Format (aber auch mit kleinstem Funktionsumfang): obj
+ \item Einfachstes Format (nur für die Darstellung von 3D-Objekten ohne Zusatzinformationen): obj
+ \item Jeder Editor geht mit Muskeln und Gelenken anders um. Gibt es ein Dateiformat, das nicht speziell zu einem Editor gehört, dass Bedingungen an die Rotation von Gelenken speichern kann?
  \item Welches Format ist für eine interaktive Anwendung sinnvoll?
- \item Alembic .abc Format? %TODO
- \item Eigenes Format erzeugen? Dann bräuchte man Plugins um es in verschiedenen Editoren laden zu können. Viel verwendeter Editor: Hudini
+ \item Eigenes Format erzeugen? Dann bräuchte man Plugins um es in verschiedenen Editoren laden zu können. Viel verwendeter Editor: Houdini (kostenlos für Studenten aber nicht Open Source)
 \end{itemize}
 
+%- - - - - - - - - -
+\subsection{OpenSim}
+
+\begin{itemize}
+ \item \url{https://simtk-confluence.stanford.edu:8443/display/OpenSim/OpenSim+Documentation}
+ \item Open Source Software Platform für die Modellierung uns Simulation von Menschen, Tieren, etc.
+ \item Import von .obj Dateien möglich. Außerdem zusätzliche Daten wie Winkel von Gelenken über .mot oder .sto Dateien (eigenes Format von OpenSim, siehe \url{https://simtk-confluence.stanford.edu:8443/display/OpenSim/Preparing+Your+Data})
+ \item Export in andere Dateiformate nicht möglich (?)
+ \item für Windows und Mac OS (Linux Support gibt es auch, ist aber schwieriger: \url{https://simtk-confluence.stanford.edu:8443/display/OpenSim/Linux+Support}) %TODO auf Windows testen
+\end{itemize}
+
+
+%- - - - - - - -
 \subsection{OBJ}
 
 \begin{itemize}
@@ -116,12 +135,26 @@
  \item Reicht wahrscheinlich für die ersten Dinge aus. Finetuning wird sowieso mit anderer Software gemacht
 \end{itemize}
 
+%- - - - - - - -
 \subsection{FBX}
 
 \begin{itemize}
  \item Verwendung am besten über Autodesk FBX SDK für C++. 
  \item Dokumentation: \url{http://help.autodesk.com/view/FBX/2019/ENU/} und \url{http://docs.autodesk.com/FBX/2014/ENU/FBX-SDK-Documentation/index.html}
  \item Es gibt auch fbxcel, eine FBX library für Rust. Ist aber relativ low level und nicht ganz offensichtlich wie zu verwenden.
- \item Nur unzureichende Möglichkeiten Einschränkungen für Gelenke zu speichern %TODO
+ \item Einschränkungen für Gelenke können in FBX nicht gespeichert werden \url{http://docs.autodesk.com/FBX/2014/ENU/FBX-SDK-Documentation/index.html?url=cpp_ref/class_fbx_constraint.html,topicNumber=cpp_ref_class_fbx_constraint_htmlc57a3f99-513a-44a0-a24f-445e9077c99f}
 \end{itemize}
+
+%- - - - - - - - - -
+\subsection{Alembic}
+
+\begin{itemize}
+ \item \url{www.alembic.io}
+ \item Wird u.a. dafür verwendet Knochen (+ Animationen) in Ziva zu importieren
+ \item Es kann mit Python (PyAlembic) und C++ verwendet werden.\\
+ PyAlembic Doku: \url{http://docs.alembic.io/python/examples.html#pyalembic-intro}\\
+ C++ API Refernce (enthält sehr wenig Infos): \url{http://docs.alembic.io/reference/index.html}
+ \item Für Rust gibt es keine Bibliothek (?)
+\end{itemize}
+
 
