--- a/latex/sections/content.tex
+++ b/latex/sections/content.tex
@@ -1,16 +1,11 @@
 
 \chapter{Bisherige Arbeiten}
 
-\begin{itemize}
- \item zbrush zspheres: "`Skelett"' mit Kugeln %TODO
- \item 3D Studio Max bipad: Parameter wie Anzahl Beine, Haltung,\dots einstellbar, generiert dann Skelett (ist aber "`nicht so toll"') %TODO
-\end{itemize}
-
 %--------------------------------
 \section{Skelett der Wirbeltiere}
 
 \begin{itemize}
- \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) $\rightarrow$ über vergleichende Anatomie informieren
+ \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) $\rightarrow$ über vergleichende Anatomie informieren %TODO Buch in Bib ausleihen
  \item "`Von vielen Zoologen wird heute der Begriff Schädeltiere (Craniota) für dieses Taxon bevorzugt. Diese Auffassung berücksichtigt, dass die Rundmäuler, wie auch einige andere Wirbeltiere, als Achsenskelett keine Wirbelsäule, sondern eine Chorda dorsalis haben. Doch allen Wirbeltieren gemein ist ein verknöcherter oder knorpeliger Schädel; sein Vorhandensein gehört somit zu den gemeinsam abgeleiteten Merkmalen (Synapomorphien) dieser Chordaten-Gruppe."' (\url{https://de.wikipedia.org/wiki/Wirbeltiere}) $\rightarrow$ Beschränkung auf Schädeltiere mit Wirbelsäule
 \end{itemize}
 
@@ -20,6 +15,31 @@
 \begin{itemize}
  \item Ziva VFX Maya Plugin zur Erstellung von Charakteren und Simulation von biomechanischen Bewegungen \url{https://zivadynamics.com/}
  \item Charaktererstellung in Ziva beginnt mit der Modellierung des Skeletts. Knochen mit Animationen werden als Alembic-Datei gespeichert und dann in "`Ziva-Knochen"' konvertiert. \url{https://discover.therookies.co/2019/06/01/vfx-in-9-steps/}
+\end{itemize}
+
+%---------------------------
+\section{ZSpheres in Zbrush}
+
+\begin{itemize}
+ \item \url{http://docs.pixologic.com/user-guide/3d-modeling/modeling-basics/creating-meshes/zspheres/},\\ Beispielvideo: \url{https://www.youtube.com/watch?v=Wl0XK6ggUOA}
+ \item Möglichkeit ein "`Skelett"' aus Kugeln zu erstellen. Definiert aber eher die grobe Außenhaut mit Zusatzinformationen dazu wo die Gelenke sind.
+\end{itemize}
+
+%----------------------
+\section{3DS MAX Biped}
+
+\begin{itemize}
+ \item \url{https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2019/ENU/3DSMax-Character-Animation/files/GUID-2F6BC5D1-DD45-4C2E-AC3A-D8C6E0F5DEB1-htm.html}
+ \item Möglichkeit Skelett in einen fertig modellierten Körper einzupassen. 
+ \item v.a. für menschliche Skelette, aber auch (limitiert) anpassbar auf Tiere
+\end{itemize}
+
+%---------------------------------
+\section{Forensik und Archäologie}
+
+\begin{itemize}
+ \item forensische Gesichstrekonstruktion ist spezialisiert auf Menschen und verwendet Zusatzinformationen wie Stockfotos von Gesichtsmerkmalen (\url{https://en.wikipedia.org/wiki/Forensic_facial_reconstruction})
+ \item Rekonstruktion von Tieren in der Archäologie anhand des Skeletts v.a. durch Künstler (?)
 \end{itemize}
 
 
@@ -74,7 +94,7 @@
 \begin{itemize}
  \item Was für Algorithmen gibt es, die zu einem vorhandenen 3D-Modell eine Hülle mit gewissen Eigenschaften generieren? \\
  es gibt eine solche Funktion z.B. in AutoCAD \url{https://knowledge.autodesk.com/de/support/autocad/learn-explore/caas/CloudHelp/cloudhelp/2016/DEU/AutoCAD-Core/files/GUID-B7F99810-765E-4E7E-ABDD-275C64147CCC-htm.html}
- \item Einfach nur eine Hülle mit gewissem Abstand sieht wahrscheinlich sehr unrealistisch aus. "`Bony Landmarks"' (Stellen an denen das Gewebe über den Knochen sehr dünn ist) könnten helfen $\rightarrow$ wie machen das Forensiker oder Archäologen? %TODO
+ \item Einfach nur eine Hülle mit gewissem Abstand sieht wahrscheinlich sehr unrealistisch aus. "`Bony Landmarks"' (Stellen an denen das Gewebe über den Knochen sehr dünn ist) könnten helfen (siehe \url{https://www.proko.com/landmarks-of-the-human-body/})
 \end{itemize}
 
 %-----------------------
@@ -98,10 +118,8 @@
      \item Welches Dateiformat? (siehe unten)
      \item Geht das mit Rust oder braucht man noch einen Zwischenschritt? Oder doch besser andere Programmiersprache?
     \end{itemize}
- \item Wie sieht Benutzereingabe aus?
+ \item Wie sieht Benutzereingabe aus? "`Interaktivität"' zunächst über Kommandozeile?
 \end{itemize}
-
-
 
 
 %---------------------
