More info to OpenSim and limbs

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -13,3 +13,18 @@
  url = {https://www.nomanssky.com/},
  urldate = {2019-10-08}
 }
+
+@article{homology,
+    author = {Olsson, Lennart and Hoßfeld, Uwe},
+    title = {Homology, Genes, and Evolutionary Innovation.— Günter P. Wagner.},
+    journal = {Systematic Biology},
+    volume = {64},
+    number = {2},
+    pages = {365-367},
+    year = {2014},
+    month = {12},
+    issn = {1063-5157},
+    doi = {10.1093/sysbio/syu127},
+    url = {https://doi.org/10.1093/sysbio/syu127},
+    eprint = {http://oup.prod.sis.lan/sysbio/article-pdf/64/2/365/24587311/syu127.pdf}
+}
