--- a/latex/sections/content.tex
+++ b/latex/sections/content.tex
@@ -78,11 +78,21 @@
  \item Köpfe sind kompliziert $\rightarrow$ Auswahl an Köpfen bereitstellen (evtl. leicht skalier-/verformbar)
 \end{itemize}
 
+%- - - - - - - - - - - - 
+\subsection{Extremitäten}
+
+\begin{itemize}
+ \item \url{https://de.wikipedia.org/wiki/Extremit\%C3\%A4tenevolution}
+ \item "`Die paarigen Flossen von Fischen und Extremitäten von Tetrapoden sind insofern homologe Skelettelemente, als sie bei beiden an Schulter- und Beckengürtel ansetzen und die Extremitäten aus den paarigen Flossen evolutionär hervorgegangen sind.\cite{homology} Sie unterschieden sich jedoch im Knochenaufbau und in der Embryonalentwicklung, so dass ein evolutionärer Übergang aus den Einzelelementen schwer erklärbar ist."'\\
+ $\rightarrow$ einfach ignorieren und trotzdem (erstmal) so modellieren?
+\end{itemize}
+
+
 %----------------
 \section{Muskeln}
 
 \begin{itemize}
- \item Die "`Hauptmuskeln"' verlaufen bei Wirbeltieren wahrscheinlich ähnlich, relativ zu den Knochen.
+ \item Die "`Hauptmuskeln"' verlaufen bei Wirbeltieren wahrscheinlich ähnlich, relativ zu den Knochen. Trotzdem unterscheiden sie sich recht stark.
  \item Knochen/Gelenke bekommen Zusatzattribute für Start- und Zielpunkte der Muskeln.
  \item Muskeln haben eine "`Dicke"' und aus Start- und Zielpunkt muss Kurve des Muskels generiert werden.
  \item Wie wird die genaue Form festgelegt? Muskeln irgendwie auf ihre "`Dicke"' aufblähen + Interaktion mit vorhandenen Elementen (andere Muskeln und Knochen) $\rightarrow$ eigenes Thema?
@@ -137,10 +147,12 @@
 
 \begin{itemize}
  \item \url{https://simtk-confluence.stanford.edu:8443/display/OpenSim/OpenSim+Documentation}
- \item Open Source Software Platform für die Modellierung uns Simulation von Menschen, Tieren, etc.
+ \item Open Source Software Platform für die Modellierung uns Simulation von Menschen, Tieren, etc.\\
+ Aber vor allem gedacht zur Auswertung von experimentellen Daten
  \item Import von .obj Dateien möglich. Außerdem zusätzliche Daten wie Winkel von Gelenken über .mot oder .sto Dateien (eigenes Format von OpenSim, siehe \url{https://simtk-confluence.stanford.edu:8443/display/OpenSim/Preparing+Your+Data})
  \item Export in andere Dateiformate nicht möglich (?)
- \item für Windows und Mac OS (Linux Support gibt es auch, ist aber schwieriger: \url{https://simtk-confluence.stanford.edu:8443/display/OpenSim/Linux+Support}) %TODO auf Windows testen
+ \item für Download und Zugang zur "`Community"' Account nötig
+ \item für Windows und Mac OS (Linux Support gibt es auch, ist aber schwieriger: \url{https://simtk-confluence.stanford.edu:8443/display/OpenSim/Linux+Support})
 \end{itemize}
 
 
