--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -75,6 +75,12 @@
 \usepackage[citestyle=numeric,style=numeric,backend=biber]{biblatex}
 \addbibresource{bibliography.bib}
 
+%% --------------------------------
+%% | Todos                        |
+%% --------------------------------
+\newcommand{\todo}[1]{\textbf{\textsc{\textcolor{red}{(TODO: #1)}}}}
+
+
 %% ====================================
 %% ====================================
 %% ||                                ||
