Add notes on input parameters and book on anatomy

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -28,3 +28,11 @@
     url = {https://doi.org/10.1093/sysbio/syu127},
     eprint = {http://oup.prod.sis.lan/sysbio/article-pdf/64/2/365/24587311/syu127.pdf}
 }
+
+@book{Vergleichende_Anatomie,
+ author = {Hildebrand, Milton and Goslow, George E.},
+ title = {Vergleichende und funktionelle Anatomie der Wirbeltiere},
+ publisher = {Springer-Verlag Berlin Heidelberg New York},
+ year = {2004},
+}
+
