--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -76,9 +76,11 @@
 \addbibresource{bibliography.bib}
 
 %% --------------------------------
-%% | Todos                        |
+%% | Shorcuts                     |
 %% --------------------------------
 \newcommand{\todo}[1]{\textbf{\textsc{\textcolor{red}{(TODO: #1)}}}}
+\newcommand{\zb}{z.\,B.\ }
+\newcommand{\dash}{d.\,h.\ }
 
 
 %% ====================================
@@ -148,6 +150,6 @@
 %% |   Appendix   |
 %% ----------------
 \appendix
-%\input{sections/appendix.tex}
+\input{sections/appendix.tex}
 
 \end{document}
