--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -36,3 +36,11 @@
  year = {2004},
 }
 
+@Book{Darcy_Thompson,
+ author = { Thompson, D'Arcy Wentworth, },
+ title = { On growth and form / by D'Arcy Wentworth Thompson },
+ edition = { 2nd ed. },
+ isbn = { 0521066220 },
+ publisher = { Cambridge University Press Cambridge, Eng },
+ year = { 1942 },
+}
