--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -1,71 +1,39 @@
-%% LaTeX2e class for student theses
-%% thesis.tex
-%% 
-%% Karlsruhe Institute of Technology
-%% Institute for Program Structures and Data Organization
-%% Chair for Software Design and Quality (SDQ)
-%%
-%% Dr.-Ing. Erik Burger
-%% burger@kit.edu
-%%
-%% See https://sdqweb.ipd.kit.edu/wiki/Dokumentvorlagen
-%%
-%% {$HeadURL$}
-%% {$LastChangedDate$}
-%% {$LastChangedRevision$}
-%% {$LastChangedBy$}
+\documentclass{thesisclass}
+% Based on thesisclass.cls of Timo Rohrberg, 2009
+% ----------------------------------------------------------------
+% Thesis - Main document
+% ----------------------------------------------------------------
+% No empty in-between chapters, remove this line if desired for double-page printing
+\let\cleardoublepage\clearpage
 
-%% Available page modes: oneside, twoside
-%% Available languages: english, ngerman
-%% Available modes: draft, final (see README)
-\documentclass[oneside, ngerman, final]{sdqthesis}
+%% -------------------------------
+%% |  Information for PDF file   |
+%% -------------------------------
+\hypersetup{
+ pdfauthor={Nina Zimbel},
+ pdftitle={Not set},
+ pdfsubject={Not set},
+ pdfkeywords={Not set}
+}
+
 
 %% ---------------------------------
 %% | Information about the thesis  |
 %% ---------------------------------
 
-%% Name of the author
-\author{Nina Zimbel}
+\newcommand{\myname}{Nina Zimbel}
+\newcommand{\mytitle}{Generierung von Wirbeltierskeletten}
+\newcommand{\myinstitute}{Institut für Visualisierung und Datenanalyse,\\ Lehrstuhl für Computergrafik}
 
-%% Title (and possibly subtitle) of the thesis
-\title{Prozedurale Generierung von Wirbeltierskeletten}
+\newcommand{\reviewerone}{?}
+\newcommand{\reviewertwo}{?}
+\newcommand{\advisor}{Dr. Johannes Schudeiske}
+\newcommand{\advisortwo}{?}
 
-%% Type of the thesis 
-\thesistype{Masterarbeit}
+\newcommand{\timestart}{XX. Monat 20XX}
+\newcommand{\timeend}{XX. Monat 20XX}
+\newcommand{\submissiontime}{DD. MM. 20XX}
 
-%% Change the institute here, ``IPD'' is default
- \myinstitute{Lehrstuhl für Computergrafik}
-
-%% You can put a logo in the ``logos'' directory and include it here
-%% instead of the SDQ logo
-% \grouplogo{myfile}
-%% Alternatively, you can disable the group logo
-% \nogrouplogo
-
-%% The reviewers are the professors that grade your thesis
-\reviewerone{Prof. Dr.-Ing. Carsten Dachsbacher}
-\reviewertwo{Prof. ?}
-
-%% The advisors are PhDs or Postdocs
-\advisorone{Dr. Johannes Schudeiske}
-%% The second advisor can be omitted
-%\advisortwo{M.Sc. D}
-
-%% Please enter the start end end time of your thesis
-\editingtime{xx. Month 20XX}{xx. Month 20XX}
-
-\settitle
-
-%% --------------------------------
-%% | Settings for word separation |
-%% --------------------------------
-
-%% Describe separation hints here.
-%% For more details, see 
-%% http://en.wikibooks.org/wiki/LaTeX/Text_Formatting#Hyphenation
-\hyphenation{
-% me-ta-mo-del
-}
 
 %% --------------------------------
 %% | Bibliography                 |
@@ -76,68 +44,101 @@
 \addbibresource{bibliography.bib}
 
 %% --------------------------------
+%% | Appendix                     |
+%% --------------------------------
+\usepackage[titletoc]{appendix}
+
+%% ---------------------------------
+%% | ToDo Marker - only for draft! |
+%% ---------------------------------
+% Remove this section for final version!
+\setlength{\marginparwidth}{20mm}
+
+\newcommand{\margtodo}
+{\marginpar{\textbf{\textcolor{red}{ToDo}}}{}}
+
+\newcommand{\todo}[1]
+{{\textbf{\textcolor{red}{(\margtodo{}#1)}}}{}}
+
+
+%% --------------------------------
+%% | Old Marker - only for draft! |
+%% --------------------------------
+% Remove this section for final version!
+\newenvironment{deprecated}
+{\begin{color}{gray}}
+{\end{color}}
+
+
+%% --------------------------------
 %% | Shorcuts                     |
 %% --------------------------------
-\newcommand{\todo}[1]{\textbf{\textsc{\textcolor{red}{(TODO: #1)}}}}
 \newcommand{\zb}{z.\,B.\ }
 \newcommand{\dash}{d.\,h.\ }
 
+%% --------------------------------
+%% | Settings for word separation |
+%% --------------------------------
+% Help for separation:
+% In german package the following hints are additionally available:
+% "- = Additional separation
+% "| = Suppress ligation and possible separation (e.g. Schaf"|fell)
+% "~ = Hyphenation without separation (e.g. bergauf und "~ab)
+% "= = Hyphenation with separation before and after
+% "" = Separation without a hyphenation (e.g. und/""oder)
 
-%% ====================================
-%% ====================================
-%% ||                                ||
-%% || Beginning of the main document ||
-%% ||                                ||
-%% ====================================
-%% ====================================
+% Describe separation hints here:
+\hyphenation{
+% Pro-to-koll-in-stan-zen
+% Ma-na-ge-ment  Netz-werk-ele-men-ten
+% Netz-werk Netz-werk-re-ser-vie-rung
+% Netz-werk-adap-ter Fein-ju-stier-ung
+% Da-ten-strom-spe-zi-fi-ka-tion Pa-ket-rumpf
+% Kon-troll-in-stanz
+}
+
+
+%% ------------------------
+%% |    Including files   |
+%% ------------------------
+% Only files listed here will be included!
+% Userful command for partially translating the document (for bug-fixing e.g.)
+\includeonly{%
+titlepage,
+content,
+appendix
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Here, main documents begins %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
-%% Set PDF metadata
-\setpdf
+% Remove the following line for German text
+%\selectlanguage{ngerman}
 
-%% Set the title
-\maketitle
-
-%% The Preamble begins here
-%\frontmatter
-
-%\input{sections/declaration.tex}
-
-\setcounter{page}{1}
+\frontmatter
 \pagenumbering{roman}
+\include{titlepage}
+\blankpage
 
-%% ----------------
-%% |   Abstract   |
-%% ----------------
- 
-%% For theses written in English, an abstract both in English
-%% and German is mandatory.
-%%
-%% For theses written in German, a German abstract is sufficient.
-%%
-%% The text is included from the following files:
-%% - sections/abstract
 
-%\includeabstract
+%% -------------------
+%% |   Directories   |
+%% -------------------
+\tableofcontents
+\blankpage
 
-%% ------------------------
-%% |   Table of Contents  |
-%% ------------------------
-%\tableofcontents
-
-%\listoffigures
-%\listoftables
 
 %% -----------------
 %% |   Main part   |
 %% -----------------
-
 \mainmatter
+\pagenumbering{arabic}
+\include{content}
 
-%\input{sections/introduction.tex}
-\input{sections/content.tex}
-%\input{sections/evaluation.tex}
-%\input{sections/conclusion.tex}
+
 
 %% --------------------
 %% |   Bibliography   |
@@ -149,7 +150,9 @@
 %% ----------------
 %% |   Appendix   |
 %% ----------------
-\appendix
-\input{sections/appendix.tex}
+\begin{appendices}
+\include{appendix}
+\end{appendices}
 
+\Erklaerung
 \end{document}
