--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -11,7 +11,7 @@
 %% -------------------------------
 \hypersetup{
  pdfauthor={Nina Zimbel},
- pdftitle={Not set},
+ pdftitle={Generierung von Wirbeltierskeletten},
  pdfsubject={Not set},
  pdfkeywords={Not set}
 }
