Add thoughts on balance and pose of skeleton

--- a/latex/content.tex
+++ b/latex/content.tex
@@ -76,7 +76,7 @@
  Außerdem ist das Skelett nicht unbedingt zusammenhängend (siehe Biologie). Muss es das? Wenn ja, unzusammenhängende Fälle ausschließen. \todo{Wann ist Skelett unzusammenhängend?} %TODO
  \item Regeln wichtig, die dafür sorgen, dass das Tier am Ende auch funktional ist.
  \item Darstellung des Skeletts in "`sinnvoller"' Pose.
- \item Beachte, dass Tier nicht umfällt: Schwerpunkte sinnvoll,\dots $\rightarrow$ Algorithmus überlegen (dafür sind auch Gelenkinformationen wichtig!)  \todo{Findet sich da ein Paper / Algorithmus?} %TODO
+ \item Beachte, dass Tier nicht umfällt: Schwerpunkte sinnvoll,\dots Dafür sind aber Muskeln wichtig $\rightarrow$ Algorithmus für eine sinnvolle Annäherung (dafür sind auch Gelenkinformationen wichtig!)  \todo{Ideen?} %TODO
  \item Der Zufall ist eingeschränkt durch Eingabeparameter oder Benutzereingabe (siehe Interaktivität). Ähnliche Parameter sollten zu ähnlichem Tier führen. Parameter könnten folgendes beschreiben:
  \begin{itemize}
   \item äußere Einflüsse (Klima, Terrain, Lebensraum,\dots)
