--- a/latex/twopagecontent.tex
+++ b/latex/twopagecontent.tex
@@ -9,7 +9,7 @@ Als Eingabe erhält der Algorithmus Zahlen, die die Generierung und Proportionen
 Der Algorithmus soll so ähnlich wie eine probabilistische kontextfreie Grammatik funktionieren\footnote{Eventuell sind in diesem Zusammenhang parametrische L-Systeme \cite{Paramteric_L-Systems} hilfreich.} Er startet mit einem maximal generischen Skelett, dass dann iterativ immer weiter verfeinert wird. Das Ergebnis ist dann ein konkretes Skelett mit Knochen und Glenken sowie deren Positionen. Zu Knochen gibt es jeweils die Information um was für einen Knochen es sich handelt und mit welchen Gelenken er verbunden ist. Zu Gelenken ist sinnvoll zu wissen wie sie bewegt werden können und mit welchen Knochen sie verbunden sind.
 
 Für die Darstellung des erzeugten Skeletts werden die oben genannten Informationen verwendet und ein entsprechendes 3D-Modell zusammengesetzt.
-Das erzeugte Skelett sollte zusätzlich zu einem Tier gehören, das, nach gewissen Kriterien, funktional ist oder zumindest so wirkt und es sollte in einer Pose dargestellt werden, die eine Ruhepose für das Tier sein könnte. In beiden Punkten ist es sinnvoll sich über die Balance Gedanken zu machen. \todo{Findet sich da ein Paper / Algorithmus?} %TODO
+Das erzeugte Skelett sollte zusätzlich zu einem Tier gehören, das, nach gewissen Kriterien, funktional ist oder zumindest so wirkt und es sollte in einer Pose dargestellt werden, die eine Ruhepose für das Tier sein könnte. In beiden Punkten ist es sinnvoll sich über die Balance Gedanken zu machen. Wobei hier aber die Muskeln eine wichtige Rolle spielen. Deshalb kann hier nur versucht werden eine gute Annäherung zu finden.
 
 Im Zuge dieser Arbeit soll auch eine interaktive (Java?) Anwendung entstehen, die den Algorithmus umsetzt. Die Benutzereingabe erfolgt über eine einfache Benutzeroberfläche. Zunächst soll eine einfache .obj-Datei erzeugt werden, die das Skelett darstellt. Später soll die Anwendung es auch erlauben Zwischenschritte visuell dazustellen. Das ist wichtig um eine sinnvolle Benutzereingabe zu ermöglichen.
 
